
 - The signatures of the 'getObjectInstance()', 'getStateToBind()', and
   'getURLContext()' methods in the 'peak.naming' package have changed, to
   place the context or parent component as the first, non-optional argument.
   (If you don't know what these methods are for, you don't need to do anything
   about this, as they are part of the naming package's extensibility
   framework.)

 - 'binding.bindTo()' now accepts a 'default=' argument, whose value will be
   used in case of a 'NameNotFound' error.

 - DEPRECATED 'naming.ParsedURL'.  It will disappear in 0.5 alpha 3 or beta.
   It is replaced by the new 'naming.URL.Base'.  The 'naming.URL' package
   provides a new URL parsing framework based on 'peak.model'.  Upgrading from
   'ParsedURL' to 'URL.Base' is trivial for ParsedURL subclasses that used
   only the 'scheme' and 'body' fields, and in fact may not require any
   changes except for the choice of base class.

   For more complex URL classes, the '__init__' methods go away, 'parse'
   methods change slightly, and explicit field definitions (using
   'model.structField' or similar) are required.  See PEAK's 'URL.Base'
   subclasses for examples.  There is also a sophisticated parsing and
   formatting framework (see the 'peak.naming.URL' and 'peak.util.fmtparse'
   modules) that can be used in place of the old regex-based approach.

 - Added 'peak.util.fmtparse', a parsing and formatting framework, and
   integrated it with 'peak.model' so that any element type can have a
   syntax for parsing from, or formatting to, a string.

 - Added 'binding.whenAssembled(...)' as syntax sugar for
   'binding.Once(...,activateUponAssembly=True)'.

 - Removed 'LOG_XYZ' convenience functions from 'peak.api', and refactored
   'peak.running.logs' to use a PEP 282-like interface, 'running.ILogger'.
   Under the new scheme, messages must be sent to a specific entry point
   (e.g. 'self.logger.warning("foo")').  Components can bind an attribute