@@ -121,95 +121,13 @@ class CheckDict(TestCase):
         else:
             raise AssertionError("Shouldn't be able to delete read key")
 
-from peak.interface import Interface
-
-#   IA
-#    |
-#   IB
-#   /\
-# IC  ID
-
-
-class IA(Interface): pass
-class IB(IA): pass
-class IC(IB): pass
-class ID(IB): pass
-
-
-class PA(object): __implements__ = IA
-class PB(object): __implements__ = IB
-class PC(object): __implements__ = IC
-class PD(object): __implements__ = ID
-class PE(object): __implements__ = IC, ID
-
-
-pA = PA()
-pB = PB()
-pC = PC()
-pD = PD()
-pE = PE()
-
-
-class RegistryBase(TestCase):
-
-    obs = pA, pB, pC, pD, pE
-
-    def setUp(self):
-
-        reg = self.reg = EigenRegistry()
-
-        for ob in self.obs:
-            reg.register(ob.__implements__, ob)
-
-
-class RegForward(RegistryBase):
-
-    def checkSimple(self):
-
-        reg = self.reg
-
-        assert reg[IA] is pA
-        assert reg[IB] is pB
-        assert reg[IC] is pC
-        assert reg[ID] is pD
-
-
-class RegBackward(RegForward):
-    obs = pD, pC, pE, pB, pA
-
-
-class RegMixed(RegForward):
-    obs = pD, pB, pA, pC, pE
-
-
-class RegUpdate(TestCase):
-
-    def checkUpdate(self):
-
-        reg1 = EigenRegistry()
-        reg2 = EigenRegistry()
-
-        reg1.register(IA,pA)
-        reg2.register(IB,pB)
-
-        assert reg1[IA] is pA
-        assert reg2[IA] is pB
-
-        reg1.update(reg2)
-
-        assert reg1[IA] is pA
-        assert reg1[IB] is pB
-
-
-
-
 TestClasses = (
     CheckEmpty, CheckEmpty2, CheckUnset, CheckFull, CheckDict,
-    RegForward, RegBackward, RegUpdate
 )
 
 def test_suite():
     return TestSuite([makeSuite(t,'check') for t in TestClasses])
+
 
 
 
